# calc.ai

./: .flake8  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
pretrained/: depth1.pt  depth2.pt
pretrained/report-depth1/: README.md
pretrained/report-depth2/: README.md
samples/: depth0.jsonl  depth1.jsonl  depth2.jsonl  depth3.jsonl
src/calcai/: _console.py  cli.py  repl.py  tokens.py
src/calcai/model/: __init__.py  layers.py  model.py  tokenizer.py
src/calcai/templates/: report.md.j2
src/calcai/training/: __init__.py  builder.py  data.py  generator.py  report.py  trainer.py
src/calcai/training/templates/: report.md.j2
src/calcai/vm/: __init__.py  ast.py  grammar.py  interpreter.py  parser.py  runtime.py  scanner.py  tokens.py
test/: test_default.py  test_layers.py  test_model.py  test_tokenizer.py  test_training_data.py  test_vm.py
