[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-ai"
version = "0.1.0"
description = "Add your description herve"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "click == 8.1.*",
    "matplotlib == 3.9.*",
    "rich == 13.3.*"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
