[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "calc-ai"
version = "0.1.0"
description = "Add your description herve"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "click == 8.1.*",
    "matplotlib == 3.9.*",
    "rich == 13.3.*"
]

[project.optional-dependencies]
cpu = ["torch ~= 2.6"]
cuda124 = ["torch ~= 2.6"]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-github-actions-annotate-failures"
]

[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda124"}
    ]
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra="cpu" },
    { index = "pytorch-cuda124", extra="cuda124" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
